refactor: switch to better-auth
